# similarstocks

./: README.md  cosine_similarity.ipynb  fd_to_ss_dict.json  pyproject.toml  requirements.txt
cosine_similarity/: cosine_similarity.txt
cosine_similarity/Advertising_Agencies/: AATV.json  ACGX.json  ACTL.json  ADMG.json  ADV.json  BAOS.json  BLAB.json  BOMN.json  BXNG.json  BYOC.json  CCO.json  CKPDY.json  CMGO.json  CMPR.json  CNET.json  CNFN.json  COGV.json  CQER.json  CRTO.json  CYGIY.json  CYGT.json  DBMM.json  DLX.json  DMS.json  DNTUY.json  EEX.json  ENGA.json  EPGC.json  EZOO.json  FBCD.json  FLNT.json  GOOLF.json  GTNM.json  GTRL.json  HKUOY.json  HRTH.json  ICLK.json  IFUS.json  INEOF.json  INUV.json  (+51 more)
cosine_similarity/Aerospace_Defense_Products_and_Services/: TPAC.json  USAE.json
cosine_similarity/Aerospace_and_Defense/: AAIIQ.json  AAZZF.json  ADFS.json  AERG.json  AIR.json  AIRI.json  AJRD.json  AKRRF.json  APLD.json  ASDN.json  ASTC.json  ATRO.json  AUTLF.json  AVAV.json  AVPFF.json  AXON.json  BA.json  BAESY.json  BANT.json  BDRAF.json  BRSI.json  BUKS.json  BWXT.json  BYRND.json  CAE.json  CMGMY.json  CODA.json  CUB.json  CVU.json  DCO.json  DEWY.json  DFLYF.json  DLRWF.json  DSUS.json  DUAVF.json  EADSF.json  EH.json  ERJ.json  ESLT.json  ETCC.json  (+76 more)
cosine_similarity/Agricultural_Inputs/: AGGL.json  AGYP.json  AMHPF.json  APEOF.json  AVD.json  BEVVF.json  BIONQ.json  BLONF.json  BWEL.json  CDBT.json  CF.json  CGA.json  CHBU.json  CTA-PB.json  CTVA.json  DNKLY.json  EACTF.json  FMC.json  GAHD.json  GREN.json  HFGVF.json  HUMT.json  ICL.json  IGNE.json  (+28 more)
(+14226 files in other folders)
